--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@types/styled-components-react-native": "^5.1.3",
+    "axios": "^0.27.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.5",
     "expo": "~45.0.0",
+    "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
